# octobatch

./: .gitignore  pyproject.toml
scripts/: orchestrate.py  tui_cli.py
scripts/providers/: __init__.py  deepseek.py  models.yaml
scripts/tui/: __init__.py
scripts/tui/screens/: home_screen.py
