[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "octobatch"
version = "1.1.1"
description = "Batch processing orchestrator for LLM APIs (Gemini, OpenAI, Anthropic, DeepSeek)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
    "jsonschema>=4.17.0",
    "asteval>=0.9.31",
    "pyperclip>=1.8.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
gemini = [
    "google-generativeai>=0.3.0",
    "google-genai>=1.62.0",
]
anthropic = [
    "anthropic>=0.30.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
]

[project.scripts]
octobatch = "scripts.orchestrate:main"
octobatch-tui = "scripts.tui_cli:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "quality"]
